<resources>
    <string name="message1">wait..</string>
    <string name="app_name">温轧实时监测</string>
    <string name="RAL1">\u3000\u3000轧制技术
        及连轧自动化国家重点实验室简称RAL
        ，前身是建于1950年代的东北工学院轧
        钢实验室，在老一代学长们的艰苦努力下，
        稳步发展，实力渐强。1989年得到世界银
        行的支持，踏上建设国家重点实验室之路。
        1995年通过国家验收，成为我国轧制技术及
        其自动化领域唯一的国家重点实验室。进入21世纪，
        RAL加快了发展步伐，规模扩大，水平提高，正在朝
        着成为本领域科研国家队的目标前进。</string>
    <string name="RAL2">\u3000\u3000埋头苦干，厚积薄发。RAL学人秉承老一代的学术传统，在科研和教学实践中逐渐形成了自己的特色文化：汇聚团队，开拓创新，躬行实践，争创一流。通过承担国家、地方和行业的重大项目，培养国家紧缺的高层次人才和广泛开展国内外学术交流，RAL人找到了自己的位置，在同行中留下了真诚、友善、踏实、干练的良好印象。</string>
    <string name="RAL3">\u3000\u3000围绕钢铁生产的国家目标，RAL确定了新的研究方向：金属材料高质量、低成本轧制过程；加工过程材料组织性能演变的模拟、预测与控制；材料成形过程综合自动化；材料的先进制备技术及高性能材料。</string>
    <string name="RAL4">\u3000\u3000RAL有一支以中国工程院院士王国栋教授为学术带头人的结构合理、求真务实、精干高效、学科交叉、勇于创新的高水平科研团队。现有教职工88人，其中专任教师66人，实验研究系列15人。专任教师中，教授20人，副教授30人；中国工程院院士1人，国家“万人计划”领军人才1人，“青年千人”1人，“优青”2人，教育部新世纪人才3人，辽宁省“百千万人才工程“百人层次”11人。</string>
    <string name="RAL5">\u3000\u3000RAL国家重点实验室现有科研、办公、实验用房7000多平方米，建有“工艺过程模拟与优化研究平台”、“金属组织与性能检测研究平台”和“控制系统参数检测与调试研究平台”。现有特色轧制研究设备14台套，并有齐全的、与之相配套的实验与检测设备，能够满足高水平工艺研究、品种开发和控制系统研究的需求。</string>
    <string name="RAL6">\u3000\u3000RAL实行“开放、流动、联合、竞争”的 运行机制，通过设立开放课题、建立访问学者制度、与国内外知名公司及研究单位成立联合研究室，吸引国内外学者来实验室开展合作研究。积极开展学术交流活动，每年邀请多名国内外专家来实验室交流讲学，派出人员出国访问、考察、出席国际会议，主持召开专题国际研讨会。实验室的知名专家教授经常深入现场，到企 业举办专题学术报告会、技术讲座、开展学术技术交流，进行课题攻关。从生产实践中发现问题，上升到理论高度开展研究，促进研究成果尽快转化为生产力。</string>
    <string name="RAL7">\u3000\u3000RAL积极组织、承担各类国家重大、重点研究开发项目，近年来主持3项十三五重点研发计划项目，担承多项十三五重点研发计划项目、863计划项目、973计划项目、国家自然科学基金项目、国家攻关计划项目等。主持横向科研项目近千项，科研合同额接近30亿。这些项目体现了我国在材料冶金领域里的国家目标，对国民经济发展具有重要作用。近年获国家科技进步奖11项，国家技术发明奖1项，省部级科学技术奖84项，发表研究论文3900余篇，出版论著69部。获得发明专利253项，实用新型专利42项。</string>
    <string name="RAL8">\u3000\u3000RAL在国内外钢铁领域的影响不断加强，成为促进我国轧制技术发展和钢铁工业进步的有生力量。欢迎国内外同行学者，特别是有为青年到实验室交流访问，申报开放课题、开展合作研究，共同为我国钢铁事业的发展作出新的贡献。</string>
    <string name="STRIP1">1.1薄带铸轧试验机组工艺设备组成</string>
    <string name="STRIP2">\u3000\u3000高硅钢薄带连铸-温轧中试机组主要工艺设备包括：真空熔炼设备、浇注设备、双辊铸轧机、铸轧机出口设备、二辊平整机、飞剪、温轧机组（含四辊温轧机、左右卷取机、左右夹送辊、带钢提温装置等）、成品卷取机、分段剪、成品收集平台等。</string>
    <string name="STRIP3">1.2工艺过程描述</string>
    <string name="STRIP4">\u3000\u3000原料经过真空熔炼、中间包浇铸、二辊铸机铸轧后经弧形导板引导至二辊平整机，经平整机平整后进行切头、切尾处理，再进入温轧区进行温轧。</string>
    <string name="STRIP5">\u3000\u3000合格的铸带经飞剪切头后由辊道向温轧机运送，穿过左卷取炉卷箱、左夹送辊和左提温装置，运送至四辊轧机，轧机辊缝闭合，进行平整和夹送操作，并将铸轧带继续向右侧运送。铸带头部到达右侧夹送辊处时，右夹送辊闭合，右热卷箱的穿带导板抬起，卷取芯轴定位。通过夹送辊的夹送，铸轧带在导向辊和穿带导板的作用下，带钢头部穿入卷取芯轴中。确认头部穿带到位后，右侧卷取机开始逆时针转动，当转动一定圈数，头部已经被带钢压紧后，右热卷箱穿带导板放下，右夹送辊打开，调节轧机速度和右卷取机速度的匹配关系，保证一定张力，并继续卷取。当铸带尾部到达飞剪处，切掉尾部；铸轧带尾部到达左夹送辊处时，右卷取机停止，开始左侧卷取机的穿带操作。</string>
    <string name="STRIP6">\u3000\u3000左侧卷取机穿带操作与右侧相同，左热卷箱的穿带导板抬起就位，卷取芯轴定位。通过夹送辊的夹送，铸轧带在导向辊和穿带导板的作用下，带钢头部穿入卷取芯轴中。确认头部穿带到位后，左侧卷取机开始顺时针转动，当转动超过一定圈数，头部已经被带钢压紧后，左卷取炉卷箱穿带导板放下，左夹送辊打开，调节轧机速度和左卷取机速度的匹配关系，建立张力，原料带钢的穿带过程结束，开始温轧过程。</string>
    <string name="STRIP7">\u3000\u3000轧制过程完成后，抬起轧机辊缝，由左卷取机继续卷取，直至将带钢完全由右卷取机中抽出，并剪掉带钢右侧头部的不合格段。左卷取机反向开卷，由两侧夹送辊共同作用，将成品带钢往后部运送。以钢卷交货的成品在成品卷取机上进行重新卷取；以板材交货的成品通过分段剪进行定尺剪切。成品卷取机上的成品钢卷由卸卷小车卸卷，定尺分段的板材由收集小车进行收集。所有成品带钢收集完成后，成品卸料过程完成。</string>
</resources>


