<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E5E5E5"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:srcCompat="@drawable/exterior" />
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STRIP1"
                    android:textColor="#000000"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STRIP2"
                    android:textColor="#000000"
                    android:textSize="@dimen/big_font"
                    android:padding="@dimen/view_padding"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STRIP3"
                    android:textColor="#000000"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STRIP4"
                    android:textColor="#000000"
                    android:textSize="@dimen/big_font"
                    android:padding="@dimen/view_padding"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STRIP5"
                    android:textColor="#000000"
                    android:textSize="@dimen/big_font"
                    android:padding="@dimen/view_padding"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STRIP6"
                    android:textColor="#000000"
                    android:textSize="@dimen/big_font"
                    android:padding="@dimen/view_padding"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STRIP7"
                    android:textColor="#000000"
                    android:textSize="@dimen/big_font"
                    android:padding="@dimen/view_padding"
                    android:textStyle="bold"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>